2010-05-24  Piotr Fusik  <fox@scene.pl>
* win32/info_dlg.c, win32/winamp/in_asap.c: 
  "Show information about the currently playing file" is now honored
  when opening the information box


** 2.1.1 released on 2010-05-05

2010-05-05  Piotr Fusik  <fox@scene.pl>
* win32/shellex/ASAPShellEx.cpp: made compilable with MSVC

* win32/shellex/ASAPShellEx.propdesc: made Subsongs unsigned


2010-05-03  Piotr Fusik  <fox@scene.pl>
* asap.c: PAL/NTSC flag in GTIA didn't work


2010-04-28  Piotr Fusik  <fox@scene.pl>
* PORTS.xml, PORTS.xsl: multi-file operations

* win32/shellex/ASAPShellEx.cpp: if the extension had been added via setup's "Change"
  it didn't work until Explorer's restart (Windows 7)

* win32/shellex/ASAPShellEx.cpp: split authors


2010-04-27  Piotr Fusik  <fox@scene.pl>
* win32/shellex/ASAPShellEx.cpp, asap.c, PORTS.xml:
  edit AUTHOR, NAME, DATE with Windows Vista and 7


2010-04-26  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: set KindMap to "music" for Windows 7 Content View

* win32/setup/asap.wxs: display properties provided by Vista/7 shell extension
  
* win32/shellex/ASAPShellEx.cpp, asap.c:
  specify that only Author/Artist, Title and Year are editable

* win32/shellex/ASAPShellEx.cpp, win32/shellex/ASAPShellEx.propdesc,
  win32/setup/asap.wxs, win32/Makefile:
  support Subsongs and PAL/NTSC on Windows Vista and 7

* win32/shellex/ASAPShellEx.cpp: implemented DllCanUnloadNow


2010-04-23  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: install the shell extension on Vista and 7

* win32/shellex/ASAPShellEx.cpp: register for all supported file types


2010-04-22  Piotr Fusik  <fox@scene.pl>
* win32/shellex/ASAPShellEx.cpp: added "PAL/NTSC"

* win32/shellex/ASAPShellEx.cpp, win32/Makefile:
  initial implementation for Windows Vista and 7


2010-03-30  Piotr Fusik  <fox@scene.pl>
* csharp/asapplay.cs, csharp/Makefile, INSTALL, README, PORTS.xml:
  simple command-line player in C#


2010-03-16  Piotr Fusik  <fox@scene.pl>