@@ -1,3 +1,11 @@
+2010-05-25  Piotr Fusik  <fox@scene.pl>
+* win32/gui.rc, win32/info_dlg.c, win32/info_dlg.h, win32/settings_dlg.c,
+  win32/winamp/in_asap.c, win32/xmplay/xmp-asap.c: 
+  added "Show information about the currently playing file" in XMPlay
+
+* win32/info_dlg.c, win32/dshow/asap_dsf.cpp: open files non-exclusively
+
+
 2010-05-24  Piotr Fusik  <fox@scene.pl>
 * win32/info_dlg.c, win32/winamp/in_asap.c: 
   "Show information about the currently playing file" is now honored
